# ielts-essay-analyzer

./: .gitignore
backend/: .gitignore  alembic.ini  pyproject.toml  ruff.toml
backend/app/: config.py  main.py  routes.py  schemas.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2025-04-01_add_current_client_id_to_users_table.py  2025-04-01_create_client_and_user_tables.py  2025-04-01_set_owner_id_ondelete_set_null.py  2025-04-07_create_tables.py
backend/app/auth/: config.py  deps.py  exceptions.py  routes.py  schemas.py  services.py  swagger.py  utils.py
backend/app/client/: exceptions.py  models.py  routes.py  services.py
backend/app/db/: config.py  deps.py  postgresql.py  redis.py
backend/app/essay/: models.py
backend/app/user/: deps.py  exceptions.py  models.py  routes.py  schemas.py  services.py  utils.py
backend/tests/auth/routes/: test_auth_routes_register.py
backend/tests/auth/services/: test_auth_services_login.py  test_auth_services_register.py
backend/tests/auth/utils/: test_auth_utils_delete_refresh_token.py  test_auth_utils_generate_token.py  test_auth_utils_generate_token_cookie.py  test_auth_utils_get_password_hash.py  test_auth_utils_get_refresh_token.py  test_auth_utils_save_refresh_token.py  test_auth_utils_set_token_cookies.py  test_auth_utils_verify_password.py
frontend/: .prettierrc  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx
frontend/app/(auth)/: layout.tsx
frontend/components/: MouseRipple.tsx  ScrollToTopButton.tsx
frontend/lib/: consts.ts
(+19 files in other folders)
